--- a/package.json
+++ b/package.json
@@ -4,22 +4,30 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "debug:android": "ionic cap run android --livereload --external",
+    "debug:ios": "ionic cap run ios --livereload --external",
+    "copy:sql:wasm": "copyfiles -u 3 node_modules/sql.js/dist/sql-wasm.wasm public/assets",
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "test:e2e": "cypress run",
     "test:unit": "vitest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "npx tsx ./scripts/modify-typeorm.cjs"
   },
   "dependencies": {
+    "@capacitor-community/sqlite": "^6.0.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.1.0",
     "@capacitor/haptics": "6.0.0",
+    "@capacitor/ios": "6.1.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "0.3.20",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
@@ -29,6 +37,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.0",
+    "copyfiles": "^2.4.1",
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
